All sections working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Invento 2K18 </string>
+    <string name="about_app">Invento 2K18 is a momentous Technical Fest conducted in KLE Dr.M.S Sheshgiri College of Engineering
+    and Technology to enocurage budding Engineers and Managers Of Future.It is hosted every year.\n \t Invento signifies ability
+    to be creative and imbibe Thoughtfulness hunger to concot.It is a platform to unleash the Potential of the students from all
+    disciplines.The Aim of this event is to elucidate the major engineering and business activities through the different events
+    thus to elicit the diverse response from the rapt and admiringly students.Undoubtly this event is a beacon of light for all
+    those who balance and blend their skills with palatable and Innovative ideas accompnied with verve.\n \t \t A melting point
+    of activities and events topped Cultural and Entertainment.A mega annual technical fest with over 40+ events,from 11 departments
+    conducted for 3 days,with more than 20 stalls to tickle your taste buds and with an expected participation of 4000+ students and
+    staff with prizes of Rs.4 lakh to be won .\n Come be a part of Magnanimous Event</string>
 </resources>
